feat: suporte relativo e cache